--- a/client/src/Components/HomeArea/MaleOrFemalePage/MaleOrFemalePageWithHeb/MaleOrFemalePageWithHeb.css
+++ b/client/src/Components/HomeArea/MaleOrFemalePage/MaleOrFemalePageWithHeb/MaleOrFemalePageWithHeb.css
@@ -1,34 +1,23 @@
 
 .MaleOrFemalePageWithHeb  {
-    margin:0;
+    /* margin:0;
     padding:0;
     box-sizing:border-box;
-    height:100%;
-    background-color: 1px solid black;
-    background-color: white;
-    flex-wrap:wrap;
-    display: flex;
+    height:100%; */
+     background-color: 1px solid black;
+    /*background-color: white;
+    flex-wrap:wrap;*/
 }
-.MaleOrFemalePageWithHeb  > .svgClass{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    width:16px;
-    height:16; 
 
-}
-.MaleOrFemalePageWithHeb > div {
-    text-align: center;
-    font-size: x-large;
-    padding: 10px;
-    background-color:white;
-    flex:1;
-
-}
-.MaleOrFemalePageWithHeb > div >img{
-    height:700px;
-    width:700px; 
-
+.mainImgs{
+    display: flex; 
 }
 
 
+@media screen and (max-width: 480px ) {
+    .mainImgs{
+        display: flex; 
+        flex-direction: column;
+    }
+    
+}
