--- a/client/src/Components/Navbar/navStyle.css
+++ b/client/src/Components/Navbar/navStyle.css
@@ -1,30 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .navDiv{
-    /* background-color: black; */
-    padding: 20px;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
-    letter-spacing: 0.25;
+    letter-spacing: 0.25px;
     text-align: left;
-    /* color: #dedede; */
- }
+    /* margin: 0px 30px ; */
+    padding: 0px 30px;
+    background-color: #f1f4fc;
+}
 
 .navList{
     display: flex;
     list-style: none;
     justify-content: right;
-    margin: 0px 10px ;
 }
 
 .navList li{
-    padding: 10px;
+    padding: 20px;
     
-
+font-style: normal;
 }
 
 .UsIMG{
      background-color: aqua;
      width: 20px;
      height: 20px;
+     padding:20px;
 }
+
+.popUpDiv{
+    width: 40%;
+    height: 50%;
+    /* display: flex;
+    flex-direction: column; */
+    background-color: rgb(44, 44, 44);
+    position: absolute;
+    left: calc(30%);
+    top: calc( 25%);
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0px 10px 15%;
+    padding-right: 20px; /* הוספת מרווח כדי לא למנוע קיפול של הסקרול בר */
+    overflow-y: scroll;
+    
+    
+    
+    .flag{
+        display:block;
+        height: 25%;
+        margin: 10px;
+        border: 1px solid rgba(128, 128, 128, 0.54);
+    }
+}
+
+
+.popUpDiv::-webkit-scrollbar {
+    width: 8px; 
+  }
+  
+  .popUpDiv::-webkit-scrollbar-thumb {
+    background-color: #58b341;
+    border-radius: 5px;
+  }
+  
+  .popUpDiv::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
