--- a/client/src/Components/PatientsArea/AddPatientInHeb/AddPatientInHeb.css
+++ b/client/src/Components/PatientsArea/AddPatientInHeb/AddPatientInHeb.css
@@ -1,4 +1,59 @@
+:root {
+  --textColorBlue: #526085;
+  --btnLike: #56ae9e;
+  --btnDisLike: #fe5e37;
+  --backgroundColorLightBlue: #f3f3fb;
+  --blueTextHeader: #5976d2;
+  --btnRed: #f98264;
+  --btnGreen: #36b9a7;
+  --inputBorder: #bacbef;
+}
 
+.AddPatientInHeb {
+  padding: 4%;
+  text-align: right;
+  background-color: var(--backgroundColorLightBlue);
+  
+  label {
+    font-size: 22px;
+    display: block;
+    color: var(--textColorBlue);
+  }
+  form {
+    label {
+      font-size: medium;
+      padding: 5px 0px;
+    }
+    input {
+      width: 75%;
+      height: 40px;
+      border: 2px solid var(--inputBorder);
+      border-radius: 3px;
+      margin-bottom: 10px;
+    }
+    input[type="checkbox"] {
+        margin-bottom: 0px;
+      width: fit-content;
+    }
+    button {
+      color: white;
+      border-radius: 3px;
+      border: none;
+        border: none;
+        padding: 5px 26px;
+        margin-left: 10px;
+        box-shadow: 4px 4px 10px 3px rgba(0, 0, 0, 0.099);
+    }
+    .sendBtn {
+        background-color: var(--btnGreen);
+    }
+    .cancelBtn {
+        background-color: var(--btnRed);
+    }
+  }
+}
+
+/* 
 .AddPatientInHeb {
     padding:0;
     margin:0;
@@ -32,4 +87,4 @@
     width:50%;
     margin: 0 0 2px 0;
 }
-
+ */
