--- a/client/src/Components/HomeArea/ResultOFAllQuestions/ResultOFAllQuestionsInHeb/ResulOfQuestionsFemaleInHeb/ResulOfQuestionsFemaleInHeb.css
+++ b/client/src/Components/HomeArea/ResultOFAllQuestions/ResultOFAllQuestionsInHeb/ResulOfQuestionsFemaleInHeb/ResulOfQuestionsFemaleInHeb.css
@@ -1,13 +1,40 @@
+:root {
+  --textColorBlue: #526085;
+  --btnLike: #56ae9e;
+  --btnDisLike: #fe5e37;
+  --backgroundColorLightBlue: #f3f3fb;
+  --blueTextHeader: #5976d2;
+  --btnRed: #f98264;
+  --btnGreen: #36b9a7;
+  --inputBorder: #bacbef;
+}
 
-	.ResulOfQuestionsFemaleInHeb{
-            margin:0;
-            padding:0;
-            box-sizing:border-box;
-            height:100%;
-            font-weight: bold;
-            font-size: large;
-            background-color: white;
-        
-        
-    }
-    
+.ResulOfQuestionsFemaleInHeb {
+  /* margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100%;
+  font-weight: bold;
+  font-size: large;
+  background-color: white;
+  display: flex;
+  justify-content: space-around; */
+}
+
+:root{
+        background-color: var(--backgroundColorLightBlue);
+}
+
+.resultPage {
+
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  font-weight: bold;
+  font-size: large;
+  background-color:var(--backgroundColorLightBlue) ;
+  display: flex;
+  justify-content:space-between;
+}
