--- a/client/src/Components/Navbar/navStyle.css
+++ b/client/src/Components/Navbar/navStyle.css
@@ -39,7 +39,8 @@ font-style: normal;
 
 .popUpDiv{
     width: 40%;
-    height: 50%;
+    height: fit-content;
+    max-height: 50%;
     /* display: flex;
     flex-direction: column; */
     background-color: rgb(44, 44, 44);
@@ -57,6 +58,7 @@ font-style: normal;
     .flag{
         display:block;
         height: 25%;
+        height: 100px;
         margin: 10px;
         border: 1px solid rgba(128, 128, 128, 0.54);
     }
