--- a/client/src/Components/HomeArea/ResultOFAllQuestions/ResultsPages/ResultsPageStyle.css
+++ b/client/src/Components/HomeArea/ResultOFAllQuestions/ResultsPages/ResultsPageStyle.css
@@ -10,7 +10,7 @@
   }
   
   .ResulOfQuestionsFemaleInHeb {
-    /* margin: 0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     height: 100%;
@@ -18,7 +18,7 @@
     font-size: large;
     background-color: white;
     display: flex;
-    justify-content: space-around; */
+    justify-content: space-around;
   }
   
   :root{
