--- a/client/src/Components/HomeArea/ResultOFAllQuestions/Results/Results.scss
+++ b/client/src/Components/HomeArea/ResultOFAllQuestions/Results/Results.scss
@@ -15,6 +15,7 @@
   padding: 1rem;
   margin: 0% 5rem;
   max-width: 50%;
+  text-align: left;
   .resultHead {
     font-family: "Poppins";
     font-size: x-large;
