--- a/client/src/Components/HomeArea/HomePage/HomePage01.scss
+++ b/client/src/Components/HomeArea/HomePage/HomePage01.scss
@@ -1,4 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@400;500&display=swap");
+:root {
+  --textColorBlue: #526085;
+  --btnLike: #56ae9e;
+  --btnDisLike: #fe5e37;
+  --backgroundColorLightBlue: #f3f3fb;
+  --blueTextHeader: #5976d2;
+  --btnRed: #f98264;
+  --btnGreen: #36b9a7;
+  --inputBorder: #bacbef;
+}
 
 .homePage01::before {
   content: "";
@@ -10,14 +20,12 @@
   background-image: url("../../../Assets/design/backroundHomePage.jpg");
   background-size: cover;
   filter: brightness(70%) hue-rotate(355deg);
-  z-index: -1; /* כדי לוודא שהתמונה תהיה מאחורי התוכן */
+  z-index: -1;
 }
 .homePage01 {
   width: 100%;
   height: 100%;
   backdrop-filter: brightness(50%) hue-rotate(30deg);
-  //   filter: brightness(50%) hue-rotate(180deg);
-  //   background-image: url("../../../Assets/design/backroundHomePage.jpg");
   background-size: 100vw;
   background-position: cover;
   background-repeat: no-repeat;
@@ -51,9 +59,9 @@
       border: none;
       border-radius: 4px;
       box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.125);
-      .iconStart{
+      .iconStart {
         font-size: 20px;
-        font-weight:bold;
+        font-weight: bold;
       }
       &:hover {
         box-shadow: 3px 7px 5px rgba(0, 0, 0, 0.125);
@@ -66,4 +74,52 @@
 }
 
 @media only screen and (max-width: 580px) {
+  .homePage01::before {
+    display: block;
+    content: "";
+    background-image: url("../../../Assets/design/backroundHomePage.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 340px;
+    filter: brightness(65%) hue-rotate(350deg);
+    z-index: -1;
+  }
+  .homePage01 .mainDiv {
+    padding: 0;
+    // background-color: var(--backgroundColorLightBlue);
+    // z-index: -4; /* צבע הרקע לבן */
+    h1 {
+      margin: 0;
+      padding: 3rem 2rem 2rem 2rem;
+      position: relative;
+      z-index: 2;
+      height: 8rem;
+      font-size: x-large;
+      color: white;
+      // background-color: white; /* צבע הרקע לבן */
+    }
+    .description {
+      background-color: var(--backgroundColorLightBlue); /* צבע הרקע לבן */
+      margin: 0%;
+      padding: 3rem 2rem 3em 2rem;
+      font-size:20px;
+      width: 100%;
+      color: var(--textColorBlue);
+      line-height: 40px;
+    }
+    button {
+      margin: 0em 1.5em;
+    }
+    &::after {
+      content: "";
+      display: block;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 50%;
+      background-color: var(--backgroundColorLightBlue); /* צבע הרקע לבן */
+      z-index: -1;
+    }
+  }
 }
