--- a/client/src/Components/HomeArea/MaleOrFemalePage/MaleOrFemalePageWithHeb/MaleOrFemalePageWithHeb.css
+++ b/client/src/Components/HomeArea/MaleOrFemalePage/MaleOrFemalePageWithHeb/MaleOrFemalePageWithHeb.css
@@ -11,6 +11,21 @@
   img {
     max-height: 100%;
     object-fit: cover;
+    height: 95%;
+    width: 70%;
+    max-width: 90%;
+    object-fit: cover;
+  }
+}
+.qNum5 {
+  img {
+    width: 40%;
+  }
+}
+
+.qNum7 {
+  img {
+    object-position: 80% 100%;
   }
 }
 
@@ -18,11 +33,44 @@
   .mainImgs {
     display: flex;
     flex-direction: column;
-    
+    justify-content: space-around;
     align-items: center;
     max-height: 100%;
     img {
-      min-height: 50%;
+      height: 85% !important;
+      width: 100% !important;
+      object-fit: cover;
+      /* padding: 1rem; */
     }
   }
+  .imgL,
+  .imgR {
+    height: 50% !important;
+    width: 100%;
+    margin: 10px 0px 0px 0px !important;
+  }
+  .qNum5 img {
+    height: 95% !important;
+    width: 65% !important;
+    padding: 0rem;
+  }
+  .qNum7 {
+    padding-top: 40px !important;
+    img {
+      height: 75% !important;
+      width: 100% !important;
+      max-width: 100% !important;
+    }
+  }
+}
+
+.noSelectedImg {
+  filter: grayscale(90%) contrast(60%) brightness(100%);
+  z-index: -10;
+}
+
+.selectedImg {
+  border: 5px solid rgb(112, 191, 143);
+  z-index: -10;
+  box-shadow: 3px 3px 10px 2px rgba(15, 8, 68, 0.193);
 }
